COMPASS-1687: Fix wrapper z-index

--- a/src/internal-packages/crud/styles/editable-element-value.less
+++ b/src/internal-packages/crud/styles/editable-element-value.less
@@ -69,7 +69,6 @@
 
   &-wrapper {
     flex-grow: 3;
-    z-index: 100;
 
     &-is-string {
       color: steelblue;
